4.0.5
  2014-03-03
  Improvement
  * #i0010: SKU is required
  Bugfix
  * #i0011: inkl. MwSt. wasn't localised

4.0.4
  2014-02-06
  Feature
  * #55726: (Caddy) Stock management: decrease item quantity after ordering
            * Moving SQL fields:
              * in_stock -> stockquantity
              * stock    -> stockManagement
            Effected files:
            * static/caddy
              * constants.txt


4.0.3
  2014-01-14
  Feature
  * #55002: LinkHandlerConfiguration
            ! without effect: linkhandler 0.3.1 has an error in TYPO3 6.x
            Effected files:
            * ext_tables.php
            * ext_conf_template.txt
            * ext_tables/*          ( new )
            * static/base/*         ( new )
            * tsConfig/page/*       ( new )
  * #55001: Template for Imagecycle no conflict
            Effected files:
            * static/imagecycle
              * setup.txt         ( new )
            * ext_tables.php
  * #i0009: List view: thumbnail links to single view (former: image popup)
  * #54992: Replace marker
            Effected files:
            * static
              * setup.txt

4.0.2
  2014-01-09
  Features
  * #54872: SEO: move support from Browser - TYPO3 without PHP - to SEO Dynamic 2
            Effected files:
            * static
              * constants.txt
              * setup.txt
  * #54793: RealURL: Template
            Effected files:
            * res/realurl/realurl_conf.php

4.0.1
  2013-12-28
  Feature
  * #i0008: TCA search fields

4.0.0
  2013-12-10
  Features
  * #53422: In stock amount
  * #i0009: Filter can enable and disable by the constant editor
  * #i0008: Backend thumbnails
  * #53378: Table field for data
  * #53377: Filter for size and material
            Effected files:
            * ext_tables.php
            * ext_tables.sql
            * locallang_db.xml
            * tca.php
            * lib/userfunc
              * class.tx_quickshop_userfunc.php
              * locallang.xml